修正解析错误

--- a/plctools/pom.xml
+++ b/plctools/pom.xml
@@ -28,6 +28,19 @@
         <encoding>utf-8</encoding>
       </configuration>
     </plugin>
+
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.1.0</version>
+      <configuration>
+          <archive>
+              <manifest>
+                  <mainClass>com.zhxh.App</mainClass>
+              </manifest>
+          </archive>
+      </configuration>
+  </plugin>
   </plugins>
   </build>
 </project>
