--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch TestApp",
+            "request": "launch",
+            "mainClass": "com.zhxh.TestApp",
+            "projectName": "plctools"
+        },
+        {
+            "type": "java",
             "name": "Launch App",
             "request": "launch",
             "mainClass": "com.zhxh.App"
